[build-system]
requires = ["setuptools>=66.1"]
build-backend = "setuptools.build_meta"

[project]
name = "pymiele"
license = { text = "MIT" }
dynamic = ["version"]
authors = [{ name = "Ake Strandberg", email = "ake@strandberg.eu" }]
description = "Python library for Miele integration with Home Assistant"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
dependencies = ["aiohttp"]
requires-python = ">=3.12.0"

[project.urls]
Repository = "https://github.com/nordicopen/pymiele"
BugTracker = "https://github.com/nordicopen/pymiele/issues"

[tool.setuptools.dynamic]
version = { attr = "pymiele.const.VERSION" }

[tool.setuptools.packages.find]
include = ["pymiele*"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.ruff]
lint.select = [
    "A",     # builtins shadowing
    "ANN",   # annotations
    "ASYNC", # async
    "B",     # bugbear
    "C4",    # comprehensions
    "D",     # pydocstyle
    "E",     # pycodestyle
    "F",     # pyflakes
    "FLY",   # flynt
    "FURB",  # refurb
    "G",     # logging
    "I",     # isort
    "LOG",   # logging
    "PTH",   # pathlib
    "RUF",   # ruff specific
    "SLF",   # private member access
    "SIM",   # simplify
    "T20",   # print
    "UP",    # pyupgrade
    "W",     # pydocstyle warning
]
lint.ignore = [
    "ANN401", # any-type
    "D202",   # blank-line-after-function
    "D203",   # incorrect-blank-line-before-class
    "D212",   # multi-line-summary-first-line
    "E501",   # line too long
    "SIM102", # collapsible-if
    "SIM105", # suppressible-exception
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
